--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,7 +1,88 @@
 @import url('reset.css');
+@import url('global.css');
+@import url('./components/_navigator.css');
+@import url('./components/_pills.css');
+@import url('./components/_link-button.css');
+@import url('./components/_gallery.css');
 
 .s-wrapper {
     display: flex;
     height: 100vh;
     flex-flow: row nowrap;
+}
+
+.s-wrapper .s-left-column {
+    width: 100px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    padding-right: 50px;
+    left: 0;
+    top: 0;
+    z-index: 1;
+}
+
+.s-wrapper .s-main-content {
+    height: 100%;
+    width: 100%;
+    background: gray;
+    padding-left: 130px;
+    background-size: cover;
+}
+
+.s-main-content__top {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.s-main-content__bottom {
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+}
+
+.s-main-content__top .s-logo img {
+    margin: 50px 0 30px;
+    width: 60vw;
+}
+
+.s-description {
+    background: rgba(0, 0, 0, .7);
+    max-width: 50%;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.s-description .s-description__text p {
+    color: white;
+    line-height: 1.7;
+}
+
+.s-description .pills {
+    margin-bottom: 20px;
+}
+
+.s-links {
+    padding: 20px;
+    padding-left: 0;
+}
+
+.s-links ul {
+    display: flex;
+}
+
+.s-main-content.s-spiderman-01-01 {
+    background: url('../images/spiderman-tobey/movie-01/background.png');
+}
+.s-main-content.s-spiderman-01-02 {
+    background: url('../images/spiderman-tobey/movie-02/background.png');
+}
+.s-main-content.s-spiderman-01-03 {
+    background: url('../images/spiderman-tobey/movie-03/background.png');
 }
