--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -54,7 +54,7 @@
 
 .s-description {
     background: rgba(0, 0, 0, .7);
-    max-width: 50%;
+    max-width: 70%;
     padding: 20px;
     border-radius: 10px;
 }
@@ -80,9 +80,77 @@
 .s-main-content.s-spiderman-01-01 {
     background: url('../images/spiderman-tobey/movie-01/background.png');
 }
+
 .s-main-content.s-spiderman-01-02 {
     background: url('../images/spiderman-tobey/movie-02/background.png');
 }
+
 .s-main-content.s-spiderman-01-03 {
     background: url('../images/spiderman-tobey/movie-03/background.png');
+}
+
+.gallery ul li a img {
+    height: 100px;
+}
+
+@media (max-width: 780px) {
+    * {
+        font-size: 12px;
+    }
+
+    .gallery ul li {
+        margin-left: 12px;
+    }
+
+    .gallery ul li a img {
+        height: 75px;
+        border: 2px solid white;
+    }
+
+
+
+}
+
+@media (max-width: 580px) {
+    * {
+        font-size: 11px;
+    }
+
+    .gallery ul li {
+        margin-left: 0;
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 580px) {
+    .s-main-content__top .s-logo img {
+        margin: 30px 0 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .s-description {
+        max-width: none;
+        width: 90%;
+        padding: 5px;
+    }
+    
+    .s-wrapper .s-main-content {
+        padding-left: 95px;
+    }
+}
+
+@media (max-width: 400px) {
+    .gallery ul li a img {
+        /* height: 60px; */
+    }
+    .s-description .s-description__text p {
+        line-height: 1.2;
+    }
+}
+
+@media (max-width: 360px) {
+    .gallery ul li a img {
+        height: 60px;
+    }
 }
